Reinforce CORS and skip OPTIONS in JWT filter